# backtest-model

./: CMakeLists.txt  README.md
Application/: CMakeLists.txt  main.cpp  unit_tests.cpp
BackTest/: CMakeLists.txt  backtest.cpp  backtest.h  backtest_includes.h  completed_transaction.cpp  completed_transaction.h  order.cpp  order.h  orderbook.cpp  orderbook.h  scanner.cpp  scanner.h
Data/: convert_from_pkl_to_csv.py  trades_eth.csv  trades_eth.pkl
Statement/: Бектест.docx  Модель.docx  ТЗ_к_написанию_технического_задания.docx
